--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- digita link, click em link:css -->
+     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <!-- main conteudo principal -->
+   <main>
+    <img width="100" src="https://i.pinimg.com/236x/f2/d2/6e/f2d26eeb0e00025b297b28a18de68f01.jpg" alt="foto de um anime">
+    <!-- h1 para titulo -->
+    <h1>Maria Carolina</h1>
+    <p>Olá, eu sou a Carol, tenho 22 anos amo ouvir música e assistir filmes de terror</p>
+   <section>
+    <h2>Músicas Favoritas</h2>
+    <ol>
+        <li>Espero a minha vez - NX ZERO</li>
+        <li>Twenty One Pilots - Heathens//Stranger Things</li>
+        <li>Avril Lavigne - Complicated</li>
+    </ol>
+   </section>
+   </main>
 </body>
 </html>
