--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- digita link, click em link:css -->
      <link rel="stylesheet" href="style.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -15,7 +18,8 @@
     <h1>Maria Carolina</h1>
     <p>Olá, eu sou a Carol, tenho 22 anos amo ouvir música e assistir filmes de terror</p>
    <section>
-    <h2>Músicas Favoritas</h2>
+    <!-- class é uma forma de nomear a tag -->
+    <h2 class="tituloMusicas">Músicas Favoritas</h2>
     <ol>
         <li>Espero a minha vez - NX ZERO</li>
         <li>Twenty One Pilots - Heathens//Stranger Things</li>
